# CodeTrail

basic_software_development/csv_processor/: CMakeLists.txt  sample.csv
basic_software_development/csv_processor/src/: csv_processor.cpp
basic_software_development/sort_compare/: CMakeLists.txt
basic_software_development/sort_compare/src/: sort_compare.cpp
basic_software_development/word_count/: CMakeLists.txt  README.md
basic_software_development/word_count/src/: test_word_count.cpp  word_count.cpp
security_compilation/aslr_demo/: aslr_test.cpp
security_compilation/buffer_overflow_demo/: vuln_buffer.cpp
security_compilation/fortify_demo/: vuln_fortify.cpp
unsafe_functions_analysis/: Makefile  unsafe_functions.c  unsafe_gets_test.c
